dsl/parser/snapshots/dsl_parser__sqlite_values__tests__blob_value.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: b\"1240\""
expression: val
---
Blob(
    [
        18,
        64,
    ],
)
