dsl/parser/snapshots/dsl_parser__sqlite_values__tests__integer_value-2.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: 0"
expression: val
---
Integer(
    0,
)
