dsl/parser/snapshots/dsl_parser__sqlite_values__tests__integer_value-4.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: -1000021900"
expression: val
---
Integer(
    -1000021900,
)
