dsl/parser/snapshots/dsl_parser__sqlite_values__tests__integer_value-5.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: 112343543009010293"
expression: val
---
Integer(
    112343543009010293,
)
