dsl/parser/snapshots/dsl_parser__sqlite_values__tests__integer_value.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: 1"
expression: val
---
Integer(
    1,
)
