dsl/parser/snapshots/dsl_parser__sqlite_values__tests__real_value-11.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: -Inf"
expression: val
---
Real(
    -inf,
)
