dsl/parser/snapshots/dsl_parser__sqlite_values__tests__real_value-2.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: 0.0"
expression: val
---
Real(
    0.0,
)
