dsl/parser/snapshots/dsl_parser__sqlite_values__tests__real_value-4.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: -1000021900.0"
expression: val
---
Real(
    -1000021900.0,
)
